--- a/assets/scss/components/_mockup.scss
+++ b/assets/scss/components/_mockup.scss
@@ -1,10 +1,31 @@
 .mockup {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -webkit-align-items: center;
   align-items: center;
-  margin: 0;
+
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: flex;
+
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -moz-box-direction: normal;
+  -moz-box-orient: vertical;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+
   box-sizing: border-box;
+  margin: 0;
 }
 
 .wide.portrait.mockup {
@@ -20,23 +41,30 @@
 }
 
 .mockup__container {
-  position: relative;
   margin: 0 3em;
+  position: relative;
 }
 
 .mockup__image,
 .mockup__shadow {
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  transition: all .3s ease;
+
   transform-style: preserve-3d;
-  transition: .3s;
 }
 
 .portrait .mockup__image,
 .portrait .mockup__shadow {
+  -webkit-transform: rotateX(45deg) rotateZ(-45deg);
+  -moz-transform: rotateX(45deg) rotateZ(-45deg);
   transform: rotateX(45deg) rotateZ(-45deg);
 }
 
 .landscape .mockup__image,
 .landscape .mockup__shadow {
+  -webkit-transform: rotateX(50deg) rotateZ(-40deg);
+  -moz-transform: rotateX(50deg) rotateZ(-40deg);
   transform: rotateX(50deg) rotateZ(-40deg);
 }
 
@@ -51,26 +79,35 @@
 }
 
 .mockup__image::before {
-  bottom: -4px;
-  left: 0;
-  background-color: #d0d0d0;
-  width: 100%;
-  height: 8px;
+  -webkit-transform: rotateX(90deg) translateY(-4px);
+  -moz-transform: rotateX(90deg) translateY(-4px);
   transform: rotateX(90deg) translateY(-4px);
+
+  background-color: #d0d0d0;
+  bottom: -4px;
+  height: 8px;
+  left: 0;
+  width: 100%;
 }
 
 .mockup__image::after {
-  top: 0;
-  left: -4px;
-  width: 8px;
-  height: 100%;
-  background-color: #bbb;
+  -webkit-transform: rotateY(90deg) translateX(4px);
+  -moz-transform: rotateY(90deg) translateX(4px);
   transform: rotateY(90deg) translateX(4px);
+
+  background-color: #bbb;
+  height: 100%;
+  left: -4px;
+  top: 0;
+  width: 8px;
 }
 
 .isometric__image {
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  transition: all .3s ease;
+
   vertical-align: bottom;
-  transition: .3s;
 }
 
 .wide.portrait .isometric__image {
@@ -79,8 +116,8 @@
 }
 
 .wide.landscape .isometric__image {
-  max-width: 480px;
   max-height: 360px;
+  max-width: 480px;
 }
 
 .narrow.portrait .isometric__image {
@@ -89,8 +126,8 @@
 }
 
 .narrow.landscape .isometric__image {
-  max-width: 480px;
   max-height: 270px;
+  max-width: 480px;
 }
 
 .isometric__image img {
@@ -98,24 +135,33 @@
 }
 
 .mockup__shadow {
+  -webkit-box-shadow: -35px 45px 15px rgba(0, 0, 0, .1);
+  -moz-box-shadow: -35px 45px 15px rgba(0, 0, 0, .1);
+  box-shadow: -35px 45px 15px rgba(0, 0, 0, .1);
+
+  height: 100%;
+  left: 0;
   position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  box-shadow: -35px 45px 15px rgba(0, 0, 0, .1);
 }
 
 .mockup__container:hover .mockup__image,
 .mockup__container:hover .mockup__shadow {
+  -webkit-transform: rotate(0);
+  -moz-transform: rotate(0);
   transform: rotate(0);
 }
 
 .landscape .mockup__container:hover .mockup__image,
 .landscape .mockup__container:hover .mockup__shadow {
+  -webkit-transform: rotate(0) scale(1.1);
+  -moz-transform: rotate(0) scale(1.1);
   transform: rotate(0) scale(1.1);
 }
 
 .mockup__container:hover .mockup__shadow {
+  -webkit-box-shadow: 0 5px 40px rgba(0, 0, 0, .5);
+  -moz-box-shadow: 0 5px 40px rgba(0, 0, 0, .5);
   box-shadow: 0 5px 40px rgba(0, 0, 0, .5);
 }
